2006-06-24  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/plot.common.R (i.get.vertex.frame.color) : 
	added
	* interfaces/R/igraph/R/plot.R (plot.igraph) : vertex.frame.color
	argument added
	* interfaces/R/igraph/R/tkplot.R (tkplot) : vertex.frame.color
	argument added
	(.tkplot.create.vertex) : vertex.frame.color handling added
	(.tkplot.deselect.vertex) : vertex.frame.color handling added

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
	added parent environment to the evaluation list

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
	"get" bug corrected

	* interfaces/R/igraph/R/basic.R (get.edge) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_edge) : added

	* interfaces/R/igraph/R/iterators.R (print.igraph.es) : prettier
	printing of edge sequences
	
2006-06-17  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (ba.game, aging.prefatt.game) : added
	zero.appeal argument
	* interfaces/R/src/rinterface.c (R_igraph_nonlinear_barabasi_game)
	(R_igraph_recent_degree_game, R_igraph_barabasi_aging_game)
	(R_igraph_recent_degree_aging_game) : added zero appeal argument

2006-06-12  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_array3_to_SEXP)
	(R_igraph_SEXP_to_array3, R_igraph_SEXP_to_array3_copy) : added

	* interfaces/R/igraph/R/measure.dynamics.R
	(measure.dynamics.citedcat.id.age) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_measure_dynamics_citedcat_id_age)
	(R_igraph_measure_dynamics_citedcat_id_age_st) : added

	* interfaces/R/igraph/R/measure.dynamics.R 
	(measure.dynamics.citingcat.id.age) : added
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_citingcat_id_age)
	(R_igraph_measure_dynamics_citingcat_id_age_st) : added
	
2006-06-03  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten
	to call new C function
	* interfaces/R/src/rinterface.c (R_igraph_barabasi_aging_game) : added
